--- a/CrossLog/Page de tracking Crosslog/Outputprog.html
+++ b/CrossLog/Page de tracking Crosslog/Outputprog.html
@@ -121,9 +121,7 @@ body,html{padding:0;margin:0}html{box-sizing:border-box}*,:after,:before{box-siz
 </div>
 </div></span>
 </div></section><section class="section--center mdl-grid site-max-width"><div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp"><span id='EtatHolder'><div style="vertical-align: top; display: inline-block;text-align: center; width: 100%;">
-  <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
-  <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
-  <div class="h2style">Etat commande</div>
+      <div class="h2style">Etat commande</div>
       <div style="color: #000;">N° 2020</div>
       <hr class="Darkhr DesktopSeparator">
       <hr class="LightMobileSeparator Lighthr">
@@ -253,7 +251,7 @@ body,html{padding:0;margin:0}html{box-sizing:border-box}*,:after,:before{box-siz
 </div></section><section class="section--center mdl-grid site-max-width"><div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp">
 <span id='TransporterVHolder'>    <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
 <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
-<div id="TransporterBlock" class="mdl-card__supporting-text" style="text-align: center; width:100%;">
+<div id=\"TransporterBlock\" class="mdl-card__supporting-text" style="text-align: center; width:100%;">
   <div class="h2style">Transporteur</div>
 </div>
 <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
