--- a/CrossLog/Page de tracking Crosslog/Outputprog.html
+++ b/CrossLog/Page de tracking Crosslog/Outputprog.html
@@ -94,7 +94,7 @@ body,html{padding:0;margin:0}html{box-sizing:border-box}*,:after,:before{box-siz
       </div>
 </div></span>
 </div><div class="mdl-cell mdl-cell--8-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp">
-<span id='ProduitsCommandeHHolder'> <div id='CommandeHolder'></div>    <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
+<span id='ProduitsCommandeHHolder'>    <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
 <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
 <div class="mdl-card__supporting-text" style="text-align: center; width:100%;">
 <!--img class="article-image" src="img/tabledetail.png" border="0" alt="" style="width: 20%; opacity: 0.55;"-->
@@ -102,12 +102,18 @@ body,html{padding:0;margin:0}html{box-sizing:border-box}*,:after,:before{box-siz
 </div>
 <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
 <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
-<div class="mdl-card__supporting-text" style="padding-left: 10px ; padding-right: 0px;padding-top: 0px;padding-bottom: 0px; margin: 0 auto; width: 100%; max-height:200px; overflow-y: auto;">
+<div id="ProductsSupportingText" class="mdl-card__supporting-text" style="padding-left: 10px ; padding-right: 0px;padding-top: 0px;padding-bottom: 0px; margin: 0 auto; width: 100%; max-height:200px; overflow-y: auto;">
 <div class="row">
 <div class="col-sm-12">
   <table class="table table-borderless">
     <tbody>
-      <tr style="width: 35%;">
+    <tr style="width: 35%;">
+  <td style="font-weight: bold; text-align: center;">
+    <img class="article-image" src="https://youssefachrafmoussi.github.io/CrossLog/Page%20de%20tracking%20Crosslog/img/product1.jpg" border="0" alt="" style=" width: 50px; height: 50px; margin-bottom: 10px;">
+  </td>
+  <td style="width: 25%;">PICTEK Souris Gamer RGB Filaire/Souris de Jeu 8 Boutons Programmables</td>
+  <td style="font-weight: bold; text-align: center;">Quantité : 1</td>
+</tr>        <tr style="width: 35%;">
         <td style="font-weight: bold; text-align: center;">
           <img class="article-image" src="https://youssefachrafmoussi.github.io/CrossLog/Page%20de%20tracking%20Crosslog/img/product1.jpg" border="0" alt="" style=" width: 50px; height: 50px; margin-bottom: 10px;">
         </td>
