--- a/CrossLog/Page de tracking Crosslog/Outputprog.html
+++ b/CrossLog/Page de tracking Crosslog/Outputprog.html
@@ -72,11 +72,12 @@ body,html{padding:0;margin:0}html{box-sizing:border-box}*,:after,:before{box-siz
 </div></section><section class="section--center mdl-grid site-max-width"><div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp">
 <span id='DateLivHolder'>    <div style="vertical-align: top; display: inline-block;text-align: center;width: 100%;">
 <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
-<hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">    <div class="h2style">Date de livraison estimée</div>
-
-<hr class="Darkhr DesktopSeparator">
-<hr class="LightMobileSeparator Lighthr">
-<div class="mdl-card__supporting-text" style="padding: 0;color: #000000; margin: 0 auto;">
+<hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
+<div class="mdl-card__supporting-text" style="text-align: center; width:100%;">
+<div class="h2style">Date de livraison estimée</div>
+</div>
+<hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
+<hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">      <div class="mdl-card__supporting-text" style="padding: 0;color: #000000; margin: 0 auto;">
         <div class="table-responsive-md">
           <table class="table table-borderless">
             <tbody>
@@ -128,12 +129,13 @@ body,html{padding:0;margin:0}html{box-sizing:border-box}*,:after,:before{box-siz
 </div>
 </div></span>
 </div></section><section class="section--center mdl-grid site-max-width"><div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp"><span id='EtatHolder'><div style="vertical-align: top; display: inline-block;text-align: center; width: 100%;">
-    <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
-<hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">      <div class="h2style">Etat commande</div>
-      <div style="color: #000;">N° 2020</div>
-      <hr class="Darkhr DesktopSeparator">
-      <hr class="LightMobileSeparator Lighthr">
-      <div style="color: #000000; margin: 0 auto; font-weight: bold;">
+<hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
+<hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
+<div class="mdl-card__supporting-text" style="text-align: center; width:100%;">
+<div class="h2style">Etat commande</div>
+<div style="color: #000;">N° 2020</div></div>
+<hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
+<hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">            <div style="color: #000000; margin: 0 auto; font-weight: bold;">
         En TRANSIT - Votre colis est en acheminement vers la plateforme de livraison.
       </div>
 </div></span>
